맵비티아이 아이템 재수정

--- a/public/mapbti.html
+++ b/public/mapbti.html
@@ -333,100 +333,63 @@
     <script>
         // --- 49문항 데이터 ---
         const questions = [
-            { id: 1, text: "매운 음식을 먹고 땀을 흘리면 스트레스가 확 풀린다.", targets: ['H'] },
-            { id: 2, text: "마늘을 먹을 때 나는 알싸한 향이 싫다", targets: ['A'], reverse: true },
-            { id: 3, text: "후추를 뿌렸을 때 느껴지는 특유의 향과 느낌이 좋다.", targets: ['P'] },
-            { id: 4, text: "와사비의 코가 찡한 느낌은 음식 맛을 방해하는 '고통'일 뿐이다.", targets: ['W'], reverse: true },
-            { id: 5, text: "마라탕이나 훠궈의 혀가 얼얼한 느낌(마비감)을 즐긴다.", targets: ['E'] },
-            { id: 6, text: "나는 맵고 자극적인 음식보다는 담백하고 슴슴한 음식을 선호한다.", targets: ['H'], reverse: true },
-            { id: 7, text: "향신료(고수, 산초 등) 향이 강한 음식은 부담스럽다.", targets: ['E'], reverse: true },
-            // Page 2
-            { id: 8, text: "곰탕이나 설렁탕에 후추를 듬뿍 뿌려 먹는 것을 좋아한다.", targets: ['P', 'H'], reverse: true },
-            { id: 9, text: "찌개나 국물 요리에 다진 마늘이 많이 들어갈수록 좋다.", targets: ['A'] },
-            { id: 10, text: "해장 메뉴로는 맵고 빨간 국물보다, 맑고 시원한 국물이 좋다.", targets: ['H'], reverse: true },
-            { id: 11, text: "칼국수나 만둣국에 후추를 듬뿍 뿌려 먹는 것을 좋아한다.", targets: ['P'] },
-            { id: 12, text: "고기를 구워 먹을 때, 마늘이나 양파를 곁들여 먹는 것을 좋아한다.", targets: ['A'] },
-            { id: 13, text: "산초나 초피가 들어가 얼얼한 맛이 나는 음식(마라탕, 추어탕)을 좋아한다.", targets: ['E', 'H'] },
-            { id: 14, text: "고깃집에서 후식으로 냉면을 먹을 때 겨자를 듬뿍 뿌려 자극적으로 먹는다.", targets: ['W'] },
-            // Page 3
-            { id: 15, text: "고기를 구워 먹을 때 생와사비를 얹어 먹는 조합을 좋아한다.", targets: ['W'] },
-            { id: 16, text: "양꼬치를 먹을 때 쯔란(큐민) 양념을 찍어 먹는 것을 좋아한다.", targets: ['E'] },
-            { id: 17, text: "튀김이나 전을 먹을 때 청양고추나 양파가 들어간 간장에 찍어 먹는 것을 좋아한다.", targets: ['H'] },
-            { id: 18, text: "스테이크나 고급 요리에 향신료(후추 등)가 들어가면 재료 본연의 맛을 해친다고 생각한다.", targets: ['P'], reverse: true },
-            { id: 18, text: "마라탕이나 마라샹궈는 매운 맛보다 얼얼한 마비감을 즐기기 위해 시키는 편이다.", targets: ['E'], antiTargets: ['H'] },
-            { id: 19, text: "고기를 구워 먹을 때 마늘을 곁들이는 것을 선호하지 않는다.", targets: ['A'], reverse:true },
-            { id: 20, text: "마라샹궈나 마라탕 등 맵고 얼얼한 음식을 좋아한다.", targets: ['E', 'H'] },
-            { id: 21, text: "양념 치킨(매운, 겨자, 마늘 등)보다 후라이드 치킨이 좋다.", targets: ['H', 'A', 'W']},
-              // Page 4
-            { id: 22, text: "라면을 끓일 때 청양고추나 고춧가루를 추가하는 것을 좋아한다.", targets: ['H'] },
-            { id: 23, text: "오일이나 토마토 파스타에 페페론치노나 크러쉬드 레드 페퍼를 뿌리는 것을 좋아한다.", targets: ['H'] },
-            { id: 24, text: "짜장면이나 우동에 고춧가루를 뿌려 매콤하게 먹는 것을 좋아한다.", targets: ['H'] },
-            { id: 25, text: "마라탕 가게에 가면 맵고 빨간 국물보다는 하얀 국물(백탕)이나 낮은 단계(1~2단계)를 시키는 편이다.", targets: ['H', 'E'], reverse: true },
-            { id: 26, text: "식당에서 음식이 나왔는데 기본으로 후추 간이 되어 있는 것이 싫다.->매운 맛에 대한 질문보다는 사전에 음식에 작업을 해놓는 것에 대한 호불호로 읽힘. 위에 후추 관련 질문이 많은데 빼는 건 어떨지?", targets: ['P'], reverse: true },
-            { id: 27, text: "후추가 투박하게 갈려서 알갱이가 있더라도 맛있게 먹을 수 있다.", targets:['P'] },
-            { id: 28, text: "식사 중에 땀이 나거나 혀가 쓰리면 짜증이 난다.", targets: ['H'], reverse: true },
-            // Page 5
-            { id: 29, text: "기본적으로 나온 초밥에 와사비를 조금 덜어내고 먹는 편이다.", targets: ['W'], reverse: true },
-            { id: 30, text: "매운탕이나 지리탕에 후추와 미나리, 마늘이 들어간 시원한 맛을 좋아한다.->미나리 빼는 게 좋을지", targets: ['P', 'A'] },
-            { id: 31, text: "초장이나 간장에 와사비를 섞어서 먹는 것을 좋아한다.", targets: ['W'] },
-            { id: 32, text: "낙지볶음이나 쭈꾸미 볶음은 매콤하게 먹어야 맛있다.", targets: ['H'] },
-            { id: 33, text: "국밥집이나 고깃집에서 반찬으로 고추가 나오면 매울까? 라는 걱정 없이 일단 베어물고 보는 편이다.", targets: ['H']},
-            { id: 34, text: "간장 게장이나 새우장을 먹을 때 청양고추의 매콤함이 곁들여진 게 좋다.", targets: ['H'] },
-            { id: 35, text: "중국집에서 반찬으로 나오는 생양파를 즐겨 먹는다.", targets: ['A'] },
-            // Page 6
-            { id: 36, text: "매운 것을 잘 먹는 것과는 관계없이, 스트레스를 받으면 자극적인 음식이 땡긴다.", targets: ['H'] },
-            { id: 37, text: "스프를 후추와 함께 먹는 것을 좋아하는 편이다", targets: ['P'] },
-            { id: 38, text: "비빔냉면보다는 물냉면을 좋아한다", targets: ['H', 'A', 'P'], reverse: true },
-            { id: 39, text: "새로운 향신료나 낯선 자극적인 맛에 도전하는 것이 즐겁다.", targets: ['E'] },
-            { id: 40, text: "코가 찡하거나 톡 쏘는 맛(와사비, 겨자 등)을 즐기는 편이다.", targets: ['W'] },
-            { id: 41, text: "마늘이 있는 음식보다는 없는 음식을 즐기는 편이다.", targets: ['A'], reverse: true },
-            { id: 42, text: "김치나 장아찌등의 반찬은 꼭 없어도 된다.", targets: ['H', 'A'], reverse: true },
-            // Page 7
-            { id: 43, text: "훠궈 등 나만의 양념장을 만드는 식당에서 남들보다 매운 소스를 많이 넣는 편이다.", targets: ['H'] },
-            { id: 44, text: "후추와 고춧가루가 들어간 '교동짬뽕' 스타일의 묵직하고 걸쭉한 국물을 좋아한다.", targets: ['P', 'H'] },
-            { id: 45, text: "입안이 얼얼한 고추의 매운맛보다는, 코가 뻥 뚫리는 와사비나 겨자의 톡 쏘는 맛이 더 매력적이다.", targets: ['W'], antiTargets: ['H'] },
-            { id: 46, text: "단순히 맵기만 한 것보다는, 후추와 향신료가 뒤섞여 혀가 얼얼하고 묵직하게 타격감이 있는 매운맛을 선호한다.", targets: ['H', 'E', 'P'] },
-            { id: 47, text: "냉채족발, 양장피처럼 겨자 소스가 있는 요리의 톡 쏘는 맛을 즐긴다.", targets: ['W'] },
-            { id: 48, text: "국물 요리에 후추를 넣을 때, 남들보다 더 많이 뿌리는 편이다.", targets: ['P'] },
-            { id: 49, text: "매운맛, 얼얼한 맛, 톡 쏘는 맛... 종류를 가리지 않고 모든 자극을 다 즐길 수 있다.", targets: ['H', 'E', 'P', 'A', 'W'] }
-        ];
+        { id: 1, text: "매운 음식을 먹고 땀을 흘리면 스트레스가 확 풀린다.", targets: ['H'] },
+        { id: 2, text: "마늘을 먹을 때 나는 알싸한 향이 싫다", targets: ['A'], reverse: true },
+        { id: 3, text: "후추를 뿌렸을 때 느껴지는 특유의 향과 느낌이 좋다.", targets: ['P'] },
+        { id: 4, text: "와사비의 코가 찡한 느낌은 음식 맛을 방해하는 '고통'일 뿐이다.", targets: ['W'], reverse: true },
+        { id: 5, text: "마라탕이나 훠궈의 혀가 얼얼한 느낌(마비감)을 즐긴다.", targets: ['E'] },
+        { id: 6, text: "나는 맵고 자극적인 음식보다는 담백하고 슴슴한 음식을 선호한다.", targets: ['H'], reverse: true },
+        { id: 7, text: "향신료(고수, 산초 등) 향이 강한 음식은 부담스럽다.", targets: ['E'], reverse: true },
+        // Page 2
+        { id: 8, text: "곰탕이나 설렁탕에 후추를 듬뿍 뿌려 먹는 것을 좋아한다.", targets: ['P', 'H'], reverse: true },
+        { id: 9, text: "찌개나 국물 요리에 다진 마늘이 많이 들어갈수록 좋다.", targets: ['A'] },
+        { id: 10, text: "해장 메뉴로는 맵고 빨간 국물보다, 맑고 시원한 국물이 좋다.", targets: ['H'], reverse: true },
+        { id: 11, text: "칼국수나 만둣국에 후추를 듬뿍 뿌려 먹는 것을 좋아한다.", targets: ['P'] },
+        { id: 12, text: "고기를 구워 먹을 때, 마늘이나 양파를 곁들여 먹는 것을 좋아한다.", targets: ['A'] },
+        { id: 13, text: "산초나 초피가 들어가 얼얼한 맛이 나는 음식(마라탕, 추어탕)을 좋아한다.", targets: ['E', 'H'] },
+        { id: 14, text: "고깃집에서 후식으로 냉면을 먹을 때 겨자를 듬뿍 뿌려 자극적으로 먹는다.", targets: ['W'] },
+        // Page 3
+        { id: 15, text: "고기를 구워 먹을 때 생와사비를 얹어 먹는 조합을 좋아한다.", targets: ['W'] },
+        { id: 16, text: "양꼬치를 먹을 때 쯔란(큐민) 양념을 찍어 먹는 것을 좋아한다.", targets: ['E'] },
+        { id: 17, text: "튀김이나 전을 먹을 때 청양고추나 양파가 들어간 간장에 찍어 먹는 것을 좋아한다.", targets: ['H'] },
+        { id: 18, text: "마라탕이나 마라샹궈는 매운 맛보다 얼얼한 마비감을 즐기기 위해 시키는 편이다.", targets: ['E'], antiTargets: ['H'] },
+        { id: 19, text: "고기를 구워 먹을 때 마늘을 곁들이는 것을 선호하지 않는다.", targets: ['A'], reverse:true },
+        { id: 20, text: "마라샹궈나 마라탕 등 맵고 얼얼한 음식을 좋아한다.", targets: ['E', 'H'] },
+        { id: 21, text: "양념 치킨(매운, 겨자, 마늘 등)보다 후라이드 치킨이 좋다.", targets: ['H', 'A', 'W']},       
 
-        // --- 32가지 유형 상세 데이터 ---
-        const typeInfo = {
-            'HEPA-W': { alias: "도파민 폭주 기관차", desc: "고통을 쾌락으로 바꾸는 미각의 정점" },
-            'HEPA-N': { alias: "정통파 마라 매니아", desc: "코 찡한 와사비만 빼고 다 잘 먹는 강철 위장" },
-            'HEPI-W': { alias: "이국적인 향신료 사냥꾼", desc: "한국 마늘맛보다 해외의 낯선 향신료를 선호함" },
-            'HEPI-N': { alias: "퓨전 마라 러버", desc: "한국적이지 않은 이국적인 매운맛만 쏙쏙 골라먹음" },
-            'HESA-W': { alias: "소프트 도파민 헌터", desc: "후추의 타격감은 싫지만 나머지 모든 자극은 환영하는 미식가" },
-            'HESA-N': { alias: "부드러운 마라탕", desc: "후추 없이 부드러운 국물에 마라와 마늘을 즐기는 타입" },
-            'HESI-W': { alias: "부드러운 카리스마", desc: "마늘과 후추는 싫지만, 마라와 와사비의 날카로운 맛은 즐김" },
-            'HESI-N': { alias: "마라탕 입문자", desc: "마라의 얼얼함은 좋지만, 강한 마늘이나 와사비 등 다른 자극은 부담" },
-            'HOPA-W': { alias: "얼큰한 K-아재 입맛", desc: "마라(향신료)는 싫지만 한국식 매운맛은 마스터" },
-            'HOPA-N': { alias: "토종 한국인 입맛", desc: "김치찌개, 국밥, 매운탕. 한국인의 밥상 그 자체" },
-            'HOPI-W': { alias: "스테이크형 매운맛", desc: "마늘 없이 고기, 후추, 와사비, 매운맛을 즐김" },
-            'HOPI-N': { alias: "심플한 매운맛", desc: "복잡한 향 없이 오직 캡사이신의 타격감만 즐김" },
-            'HOSA-W': { alias: "깔끔한 매운맛 선호가", desc: "후추의 텁텁함은 싫고 깔끔하게 매운맛을 즐김" },
-            'HOSA-N': { alias: "담백한 매운맛", desc: "자극적인 후추/향신료 없이 깔끔하게 매운맛만 즐김" },
-            'HOSI-W': { alias: "와사비 매니아", desc: "다른 자극은 필요 없다. 오직 매운맛과 코 찡함만!" },
-            'HOSI-N': { alias: "선택적 매운맛", desc: "매운건 좋지만 다른 향신료나 자극은 거부한다" },
-            'CEPA-W': { alias: "맵찔이 미식가", desc: "매운건 못 먹지만 향신료와 자극은 즐기는 모험가" },
-            'CEPA-N': { alias: "마라탕 순한맛 (백탕)", desc: "매운건 싫지만 마라의 얼얼함과 진한 맛은 포기 못해" },
-            'CEPI-W': { alias: "이국적인 브런치 스타일", desc: "매운 한식보다는 후추와 허브가 들어간 양식파" },
-            'CEPI-N': { alias: "순한맛 에스닉 푸드", desc: "매운맛도, 마늘도 싫지만 이국적인 향은 좋아함" },
-            'CESA-W': { alias: "섬세한 미식가", desc: "맵고 텁텁한 건 싫지만, 마늘/향신료/와사비의 풍미는 사랑함" },
-            'CESA-N': { alias: "향긋한 쌀국수", desc: "자극적이지 않고 마늘과 향신료가 어우러진 깊은 맛을 선호" },
-            'CESI-W': { alias: "톡 쏘는 샐러드", desc: "가볍고 상큼하면서 코가 뻥 뚫리는 맛을 선호" },
-            'CESI-N': { alias: "호기심 많은 순한맛", desc: "맵진 않지만 혀가 얼얼한 독특한 느낌을 즐김" },
-            'COPA-W': { alias: "일식 돈까스 매니아", desc: "매운건 싫지만 와사비, 후추, 마늘의 풍미는 사랑함" },
-            'COPA-N': { alias: "진한 곰탕 매니아", desc: "매운맛 없이 후추와 마늘로 낸 깊은 맛을 사랑함" },
-            'COPI-W': { alias: "고급 스테이크 취향", desc: "재료 본연의 맛에 후추와 와사비만 살짝 더함" },
-            'COPI-N': { alias: "평양냉면 매니아", desc: "슴슴한 맛 속에 후추 향만 살짝 즐기는 미식가" },
-            'COSA-W': { alias: "초밥과 삼겹살", desc: "후추/마라 없이 깔끔하게 와사비와 마늘만 곁들임" },
-            'COSA-N': { alias: "한국인의 밥상 (순한맛)", desc: "된장찌개처럼 구수하고 마늘 들어간 안 매운 한식" },
-            'COSI-W': { alias: "스시 장인", desc: "아무 자극도 싫지만 와사비 하나만큼은 허락한다" },
-            'COSI-N': { alias: "순수한 아기 입맛", desc: "자극 없는 평화로운 맛을 추구하는 순수주의자" },
-            'DEFAULT': { alias: "알 수 없는 미식가", desc: "매우 독특한 취향의 소유자" }
-        };
+         // Page 4
+        { id: 22, text: "라면을 끓일 때 청양고추나 고춧가루를 추가하는 것을 좋아한다.", targets: ['H'] },
+        { id: 23, text: "오일이나 토마토 파스타에 페페론치노나 크러쉬드 레드 페퍼를 뿌리는 것을 좋아한다.", targets: ['H'] },
+        { id: 24, text: "짜장면이나 우동에 고춧가루를 뿌려 매콤하게 먹는 것을 좋아한다.", targets: ['H'] },
+        { id: 25, text: "마라탕 가게에 가면 맵고 빨간 국물보다는 하얀 국물(백탕)이나 낮은 단계(1~2단계)를 시키는 편이다.", targets: ['H', 'E'], reverse: true },
+        { id: 26, text: "식당에서 음식이 나왔는데 기본으로 후추 간이 되어 있는 것이 싫다", targets: ['P'], reverse: true },
+        { id: 27, text: "후추가 투박하게 갈려서 알갱이가 있더라도 맛있게 먹을 수 있다.", targets:['P'] },
+        { id: 28, text: "식사 중에 땀이 나거나 혀가 쓰리면 짜증이 난다.", targets: ['H'], reverse: true },
+        // Page 5
+        { id: 29, text: "기본적으로 나온 초밥에 와사비를 조금 덜어내고 먹는 편이다.", targets: ['W'], reverse: true },
+        { id: 30, text: "매운탕이나 지리탕에 후추와 미나리, 마늘이 들어간 시원한 맛을 좋아한다.", targets: ['P', 'A'] },
+        { id: 31, text: "초장이나 간장에 와사비를 섞어서 먹는 것을 좋아한다.", targets: ['W'] },
+        { id: 32, text: "낙지볶음이나 쭈꾸미 볶음은 매콤하게 먹어야 맛있다.", targets: ['H'] },
+        { id: 33, text: "국밥집이나 고깃집에서 반찬으로 고추가 나오면 매울까? 라는 걱정 없이 일단 베어물고 보는 편이다.", targets: ['H']},
+        { id: 34, text: "간장 게장이나 새우장을 먹을 때 청양고추의 매콤함이 곁들여진 게 좋다.", targets: ['H'] },
+        { id: 35, text: "중국집에서 반찬으로 나오는 생양파를 즐겨 먹는다.", targets: ['A'] },
+        // Page 6
+        { id: 36, text: "매운 것을 잘 먹는 것과는 관계없이, 스트레스를 받으면 자극적인 음식이 땡긴다.", targets: ['H'] },
+        { id: 37, text: "스프를 후추와 함께 먹는 것을 좋아하는 편이다", targets: ['P'] },
+        { id: 38, text: "비빔냉면보다는 물냉면을 좋아한다", targets: ['H', 'A', 'P'], reverse: true },
+        { id: 39, text: "새로운 향신료나 낯선 자극적인 맛에 도전하는 것이 즐겁다.", targets: ['E'] },
+        { id: 40, text: "코가 찡하거나 톡 쏘는 맛(와사비, 겨자 등)을 즐기는 편이다.", targets: ['W'] },
+        { id: 41, text: "마늘이 있는 음식보다는 없는 음식을 즐기는 편이다.", targets: ['A'], reverse: true },
+        { id: 42, text: "김치나 장아찌등의 반찬은 꼭 없어도 된다.", targets: ['H', 'A'], reverse: true },
+        // Page 7
+        { id: 43, text: "훠궈 등 나만의 양념장을 만드는 식당에서 남들보다 매운 소스를 많이 넣는 편이다.", targets: ['H'] },
+        { id: 44, text: "후추와 고춧가루가 들어간 '교동짬뽕' 스타일의 묵직하고 걸쭉한 국물을 좋아한다.", targets: ['P', 'H'] },
+        { id: 45, text: "입안이 얼얼한 고추의 매운맛보다는, 코가 뻥 뚫리는 와사비나 겨자의 톡 쏘는 맛이 더 매력적이다.", targets: ['W'], antiTargets: ['H'] },
+        { id: 46, text: "단순히 맵기만 한 것보다는, 후추와 향신료가 뒤섞여 혀가 얼얼하고 묵직하게 타격감이 있는 매운맛을 선호한다.", targets: ['H', 'E', 'P'] },
+        { id: 47, text: "냉채족발, 양장피처럼 겨자 소스가 있는 요리의 톡 쏘는 맛을 즐긴다.", targets: ['W'] },
+        { id: 48, text: "국물 요리에 후추를 넣을 때, 남들보다 더 많이 뿌리는 편이다.", targets: ['P'] },
+        { id: 49, text: "매운맛, 얼얼한 맛, 톡 쏘는 맛... 종류를 가리지 않고 모든 자극을 다 즐길 수 있다.", targets: ['H', 'E', 'P', 'A', 'W'] }
+    ];
 
         let currentPage = 1;
         const totalPages = 7;
