--- a/public/mapbti.html
+++ b/public/mapbti.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MAP-BTI :: 32가지 미각 성향 정밀 진단</title>
   <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+  <script defer src="/_vercel/insights/script.js"></script>
   <style>
     :root {
       --agree-color: #ff4d4d;
