fix: CTA 배너 서비스 설명 문구 수정
- 'AI 매운 맛집 큐레이션 서비스' → '맵기 리뷰 데이터 기반 큐레이션 서비스'로 변경

--- a/public/mapbti.html
+++ b/public/mapbti.html
@@ -1350,7 +1350,7 @@
           <div class="service-logo">맵맵맵</div>
           <p class="service-desc">
             32가지 미각 성향을 기반으로 <strong>나에게 딱 맞는 매운맛</strong>을 추천해주는<br>
-            AI 매운 맛집 큐레이션 서비스
+            맵기 리뷰 데이터 기반 큐레이션 서비스
           </p>
         </div>
 
