--- a/public/mapbti.html
+++ b/public/mapbti.html
@@ -4,7 +4,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MAP-BTI :: 32가지 미각 성향 정밀 진단</title>
+  <title>MAP-BTI :: 32가지 미각 성향 정밀 진단 | 맵맵맵</title>
+
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="당신의 미각 성향은? 49개 질문으로 알아보는 32가지 매운맛 성향 테스트. 나만의 맵BTI 유형을 확인하고 맞춤 맛집을 추천받으세요!" />
+  <meta name="keywords" content="MAP-BTI, 맵BTI, 미각성향테스트, 매운맛테스트, 맵찔이테스트, 맵맵맵, 성향테스트" />
+  <meta name="author" content="맵맵맵 팀" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://mapmapmap-landing.vercel.app/mapbti.html" />
+  <meta property="og:title" content="MAP-BTI :: 32가지 미각 성향 정밀 진단" />
+  <meta property="og:description" content="당신의 미각 성향은? 49개 질문으로 알아보는 32가지 매운맛 성향 테스트!" />
+  <meta property="og:image" content="https://mapmapmap-landing.vercel.app/og-image.png" />
+  <meta property="og:locale" content="ko_KR" />
+  <meta property="og:site_name" content="맵맵맵" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://mapmapmap-landing.vercel.app/mapbti.html" />
+  <meta name="twitter:title" content="MAP-BTI :: 32가지 미각 성향 정밀 진단" />
+  <meta name="twitter:description" content="당신의 미각 성향은? 49개 질문으로 알아보는 32가지 매운맛 성향 테스트!" />
+  <meta name="twitter:image" content="https://mapmapmap-landing.vercel.app/og-image.png" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="apple-touch-icon" href="/favicon.svg" />
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://mapmapmap-landing.vercel.app/mapbti.html" />
+
   <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
   <script defer src="/_vercel/insights/script.js"></script>
   <style>
