feat: Google Search Console 인증 메타 태그 추가

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta name="keywords" content="맵맵맵, 매운맛집, 맛집추천, 맵기리뷰, MAP-BTI, 맵찔이, 매운음식, 맛집큐레이션" />
   <meta name="author" content="맵맵맵 팀" />
   <meta name="robots" content="index, follow" />
+  <meta name="google-site-verification" content="JdS52oDPb2PNwxVZBqSebbfdZd9zgpSMoSQx3-ZuZzE" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
