--- a/public/mapbti.html
+++ b/public/mapbti.html
@@ -1096,6 +1096,46 @@
       box-sizing: border-box;
     }
 
+    /* 로딩 스피너 스타일 */
+    .loading-section {
+      text-align: center;
+      padding: 40px 20px;
+    }
+
+    .loading-spinner {
+      width: 60px;
+      height: 60px;
+      margin: 0 auto 20px;
+      animation: spin 1s linear infinite;
+    }
+
+    .loading-spinner svg {
+      width: 100%;
+      height: 100%;
+    }
+
+    @keyframes spin {
+      0% {
+        transform: rotate(0deg);
+      }
+
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+
+    .loading-text {
+      font-size: 1rem;
+      font-weight: 700;
+      color: #fff;
+      margin-bottom: 8px;
+    }
+
+    .loading-subtext {
+      font-size: 0.85rem;
+      color: #888;
+    }
+
     .spicy-modal-overlay.show {
       display: flex;
     }
@@ -1876,6 +1916,24 @@
             </div>
           </div>
 
+          <!-- 로딩 상태 -->
+          <div id="loading-state" class="loading-section" style="display: none;">
+            <div class="loading-spinner">
+              <svg viewBox="0 0 50 50">
+                <circle cx="25" cy="25" r="20" fill="none" stroke="url(#gradient)" stroke-width="4"
+                  stroke-linecap="round" stroke-dasharray="90 150" stroke-dashoffset="0" />
+                <defs>
+                  <linearGradient id="gradient" x1="0%" y1="0%" x2="100%" y2="0%">
+                    <stop offset="0%" stop-color="#ff4d4d" />
+                    <stop offset="100%" stop-color="#ff7e7e" />
+                  </linearGradient>
+                </defs>
+              </svg>
+            </div>
+            <div class="loading-text">데이터 전송 중...</div>
+            <div class="loading-subtext">잠시만 기다려주세요 🔥</div>
+          </div>
+
           <!-- 완료 메시지 -->
           <div id="success-message" class="form-success" style="display: none;">
             <div class="success-icon">🎉</div>
@@ -2195,6 +2253,10 @@
 
       // 전역 변수에 결과 저장 (CTA에서 사용)
       window.userMapBTIResult = code;
+      window.userMapBTIScores = P; // 점수도 저장
+
+      // MAP-BTI 결과를 Google Sheets에 기록
+      sendMapBTIResult(code, P);
 
       const info = typeInfo[code] || typeInfo['DEFAULT'];
       const content = generateAnalysisContent(code, P, info);
@@ -2210,6 +2272,39 @@
 
       renderChart(P);
       document.getElementById('intro-content').innerHTML = content.intro;
+    }
+
+    // MAP-BTI 결과를 Google Sheets에 전송
+    async function sendMapBTIResult(resultCode, scores) {
+      try {
+        const payload = {
+          type: 'mapbti_result',
+          resultCode: resultCode,
+          scores: {
+            H: scores.H,
+            E: scores.E,
+            P: scores.P,
+            A: scores.A,
+            W: scores.W
+          }
+        };
+
+        console.log('📊 MAP-BTI 결과 전송:', payload);
+
+        await fetch(GOOGLE_SHEETS_API_URL, {
+          method: 'POST',
+          mode: 'no-cors',
+          headers: {
+            'Content-Type': 'text/plain;charset=utf-8',
+          },
+          body: JSON.stringify(payload),
+        });
+
+        console.log('✅ MAP-BTI 결과 기록 완료');
+      } catch (error) {
+        console.error('MAP-BTI 결과 기록 실패:', error);
+        // 에러가 발생해도 사용자 경험에 영향 없음
+      }
     }
 
     function renderChart(P) {
@@ -2822,7 +2917,7 @@
 
     // Google Sheets API URL (Vercel 환경변수에서 가져오거나 직접 설정)
     // 보안을 위해 실제 URL은 배포 환경에서 설정하세요
-    const GOOGLE_SHEETS_API_URL = 'https://script.google.com/macros/s/AKfycbx5HmycEjexEGC0d_5Db7yelguDbb2jgEh14xsYHLZrlNvmm972D-1fjTY1O31InOwV5g/exec';
+    const GOOGLE_SHEETS_API_URL = 'https://script.google.com/macros/s/AKfycbykDKf5_YMD71F8bHjKmeQ0nogDHxIZ6XanQv7NVYNQYNZtwPKqu9Sm4CGdbA00UHs5CQ/exec';
 
     // 폼 데이터 임시 저장
     let formData = {
@@ -3010,11 +3105,9 @@
 
     // Google Sheets로 데이터 전송
     async function submitToGoogleSheets() {
-      const makerButtons = document.querySelectorAll('.maker-btn');
-      makerButtons.forEach(btn => {
-        btn.disabled = true;
-        btn.style.opacity = '0.5';
-      });
+      // 메이커 버튼 숨기고 로딩 표시
+      document.getElementById('maker-offer').style.display = 'none';
+      document.getElementById('loading-state').style.display = 'block';
 
       try {
         const payload = {
@@ -3041,19 +3134,23 @@
 
         console.log('✅ 데이터 전송 완료 (no-cors 모드)');
 
-        // 성공 메시지 표시
-        showSuccessMessage();
+        // 잠시 후 성공 메시지 표시 (로딩 애니메이션 보여주기 위해)
+        setTimeout(() => {
+          showSuccessMessage();
+        }, 800);
 
       } catch (error) {
         console.error('전송 실패:', error);
         // 에러가 발생해도 사용자 경험을 위해 성공으로 처리
-        showSuccessMessage();
+        setTimeout(() => {
+          showSuccessMessage();
+        }, 800);
       }
     }
 
     // 성공 메시지 표시
     function showSuccessMessage() {
-      document.getElementById('maker-offer').style.display = 'none';
+      document.getElementById('loading-state').style.display = 'none';
       document.getElementById('success-message').style.display = 'block';
 
       const descText = document.getElementById('success-desc-text');
